Fix the desktop features-section layout to avoid items collapse

--- a/source/sass/block-styles/_features.scss
+++ b/source/sass/block-styles/_features.scss
@@ -50,7 +50,7 @@
 .features__features-list li {
   // outline: 5px dashed rgb(243, 105, 105);
   min-height: 300px;
-  width: 570px;
+  width: 100%;
   display: flex;
   justify-content: center;
   padding: 0;
