--- a/source/sass/common-styles/_fonts.scss
+++ b/source/sass/common-styles/_fonts.scss
@@ -3,7 +3,7 @@
   src: url("../fonts/Robotocondensed.woff2") format("woff2"), url("../../fonts/Robotocondensed.woff") format("woff");
   font-weight: 400;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   src: url("../fonts/Robotocondensedbold.woff2") format("woff2"), url("../../fonts/Robotocondensedbold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 
 
@@ -20,5 +20,5 @@
   src: url("../fonts/ptmono.woff2") format("woff2"), url("../../fonts/ptmono.woff") format("woff");
   font-weight: 400;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
