--- a/source/sass/common-styles/_scaffolding.scss
+++ b/source/sass/common-styles/_scaffolding.scss
@@ -18,7 +18,7 @@ body {
   margin: 0 auto;
   padding: 0;
   background-image: url("../img/pattern.png");
-  background-repeat: no-repeat;
+  // background-repeat: no-repeat;
   background-position: 50% top;
   background-color: #1b2d37;
   background-size: 100%;
